# cmake-bug-check

./: CMakeLists.txt  README.md
include/checkbug/quick/: quick.h
include/checkbug/slow/: slow.h
source/: CMakeLists.txt
source/quick/: CMakeLists.txt  quick.cc
source/slow/: CMakeLists.txt  slow.cc
tests/: CMakeLists.txt
tests/quick_tests/: CMakeLists.txt  run.cmake  step-1.cc  step-3.cc
