SET(_src slow.cc)

ADD_LIBRARY(obj_slow OBJECT ${_src} ${CMAKE_SOURCE_DIR}/include/checkbug/slow/slow.h)

SET_TARGET_PROPERTIES(obj_slow PROPERTIES LINKER_LANGUAGE "CXX")

SET(_flags "")
SEPARATE_ARGUMENTS(_flags)
TARGET_COMPILE_OPTIONS(obj_slow PUBLIC
  $<$<COMPILE_LANGUAGE:CXX>:${_flags}>
  )

TARGET_COMPILE_DEFINITIONS(obj_slow
  PUBLIC "" "")

SET_PROPERTY(GLOBAL APPEND PROPERTY CHECKBUG_OBJECTS
  "$<TARGET_OBJECTS:obj_slow>")
